syntax = "proto3";

package account.v1;

import "validate/validate.proto";

enum Role {
  ROLE_UNSPECIFIED = 0;
  ROLE_OWNER = 1;
  ROLE_MANAGER = 2;
}

enum Scope {
  SCOPE_UNSPECIFIED = 0;
  SCOPE_READ = 1;
  SCOPE_WRITE = 2;
}

// Account ...
message Admin {
  /* Admin data */

  // key represents the unique identifier of the admin
  string key = 1 [json_name = "_key"];
  // first name of the admin
  string first_name = 2 [(validate.rules).string.min_len = 1];
  // last name of the admin
  string last_name = 3 [(validate.rules).string.min_len = 2];
  // unique email of the admin
  string email = 4 [(validate.rules).string.email = true];
  // password_hash is the hashed password of the admin
  bytes password_hash = 5;
  // avatar image associated to the avatar
  optional bytes avatar = 6;
  // notes associated to the admin
  optional string notes = 7;

  /* Authorization */

  // role of the admin
  Role role = 8;
  // scopes that the admin contains for each model
  map<string, Scope> scopes = 9;
}
