syntax = "proto3";

package dashboard.v1;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";

service SchemaService {
  // GetSchema ...
  rpc GetSchema(google.protobuf.Empty) returns (GetSchemaResponse) {
    option (google.api.http) = {get: "/dashboard/v1/schema"};
  }
}

message GetSchemaResponse {
  google.protobuf.Struct data = 1;
}
